updated sh file and backend for futher processing

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=akshYan2128
+DB_PASSWORD=Kgisl@123
 DB_DATABASE=aon           
 PORT=5001                   
-ORIGIN=http://localhost:5001
+ORIGIN=http://192.168.253.187:5194
