--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.19.2",
     "mysql2": "^3.12.0",
+    "node-cron": "^3.0.3",
     "path": "^0.12.7"
   },
   "devDependencies": {
